# plot_agent

./: README.md  pyproject.toml
docs/: ARCHITECTURE.md  ROADMAP.md
docs/img/: databricks_demo.mmd
plot_agent/: schemas.py  state.py
plot_agent/graph/: builder.py
plot_agent/graph/nodes/: mermaid_renderer.py  plan_reviewer.py  planner.py  routing.py
plot_agent/render/: png.py
tests/: conftest.py  test_mermaid_ir.py  test_smoke.py
