[project]
name = "plot-agent"
version = "0.2.0"
description = "BRD → Mermaid architecture diagram generator. A LangGraph multi-agent pipeline (planner / executors / reviewer / mermaid) with strict schemas, no silent fallbacks."
authors = [
    { name = "Richard Mocha" },
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.10,<4.0"
keywords = [
    "diagram",
    "architecture-diagram",
    "mermaid",
    "langgraph",
    "llm-agent",
    "multi-agent",
    "flowchart",
    "brd",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Documentation",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "pydantic>=2.0,<3.0",
    "openai>=1.40,<2.0",
    "python-dotenv>=1.0,<2.0",
    "rich>=13.0,<15.0",
    "pillow>=10.0,<12.0",
    "langgraph (>=1.1.8,<2.0.0)",
    "langchain-core (>=1.3.0,<2.0.0)",
]

[project.optional-dependencies]
# Enable to feed .pdf files directly as BRDs.
pdf = ["pypdf>=4.0,<6.0"]

[project.scripts]
plot-agent = "plot_agent.cli:main"

[project.urls]
Homepage = "https://github.com/LovHan/archimaid-multi-agent-architecture-diagrams"
Repository = "https://github.com/LovHan/archimaid-multi-agent-architecture-diagrams"
Documentation = "https://github.com/LovHan/archimaid-multi-agent-architecture-diagrams#readme"
Issues = "https://github.com/LovHan/archimaid-multi-agent-architecture-diagrams/issues"

# ---------- Poetry-specific ----------
[tool.poetry]
package-mode = true
packages = [{ include = "plot_agent" }]

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
pytest-cov = "^5.0"
ruff = "^0.6"
mypy = "^1.10"

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"

# ---------- Dev tool configs ----------

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM"]
ignore = [
    "E501",  # line-too-long (handled by the formatter)
    "B008",  # default arg function call
]

[tool.mypy]
python_version = "3.10"
strict = false
ignore_missing_imports = true
warn_unused_ignores = true
files = ["tests"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"
pythonpath = ["."]
